[tool.poetry]
name = "seisflow"
version = "0.1.0"
description = ""
authors = ["ziyixi <ziyixi@mail.ustc.edu.cn>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.9"
pandas = ">=1.1.0"
scipy = ">=1.5.0"
xarray = ">=0.16.0"
numpy = ">=1.19.0"
pyproj = ">=2.6.0"
obspy = ">=1.2.0"
loguru = ">=0.5.0"
recordtype = ">=1.3"

[tool.poetry.dev-dependencies]
click = ">=7.1.0"
sh = ">=1.13.0"
matplotlib = ">=3.3.0"
tqdm = ">=4.48.0"
Cartopy = ">=0.18.0"
mpi4py = ">=3.0.0"
pyasdf = ">=0.7.0"
HinetPy = ">=0.6.0"
netCDF4 = ">=1.5.0"
numba = ">=0.51.0"
PyPDF2 = ">=1.26.0"
seaborn = ">=0.11.0"
sympy = ">=1.6.0"
pygmt = ">=0.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
